--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "glow"
+name = "gll"
 version = "0.16.0"
 description = "GL on Whatever: a set of bindings to run GL (Open GL, OpenGL ES, and WebGL) anywhere, and avoid target-specific code."
 authors = [
-  "Joshua Groves <josh@joshgroves.com>",
-  "Dzmitry Malyshau <kvarkus@gmail.com>",
+    "Joshua Groves <josh@joshgroves.com>",
+    "Dzmitry Malyshau <kvarkus@gmail.com>",
 ]
 homepage = "https://github.com/grovesNL/glow.git"
 repository = "https://github.com/grovesNL/glow"
@@ -14,16 +14,16 @@ edition = "2021"
 [package.metadata.docs.rs]
 default-target = "x86_64-unknown-linux-gnu"
 targets = [
-  "x86_64-unknown-linux-gnu",
-  "x86_64-apple-darwin",
-  "x86_64-pc-windows-msvc",
-  "i686-unknown-linux-gnu",
-  "i686-pc-windows-msvc",
-  "wasm32-unknown-unknown"
+    "x86_64-unknown-linux-gnu",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+    "i686-unknown-linux-gnu",
+    "i686-pc-windows-msvc",
+    "wasm32-unknown-unknown"
 ]
 
 [lib]
-name = "glow"
+name = "gll"
 path = "src/lib.rs"
 
 [dependencies]
@@ -42,60 +42,59 @@ slotmap = "1"
 version = "~0.3.60"
 package = "web-sys"
 features = [
-  "Document",
-  "Element",
-  "HtmlCanvasElement",
-  "HtmlImageElement",
-  "HtmlVideoElement",
-  "ImageBitmap",
-  "ImageData",
-  "VideoFrame",
-  "WebGlActiveInfo",
-  "WebGlBuffer",
-  "WebGlFramebuffer",
-  "WebGlProgram",
-  "WebGlQuery",
-  "WebGlRenderbuffer",
-  "WebGlRenderingContext",
-  "WebGl2RenderingContext",
-  "WebGlSampler",
-  "WebGlShader",
-  "WebGlShaderPrecisionFormat",
-  "WebGlSync",
-  "WebGlTexture",
-  "WebGlTransformFeedback",
-  "WebGlUniformLocation",
-  "WebGlVertexArrayObject",
-  "Window",
-
-  "AngleInstancedArrays",
-  "ExtBlendMinmax",
-  "ExtColorBufferFloat",
-  "ExtColorBufferHalfFloat",
-  "ExtDisjointTimerQuery",
-  "ExtFragDepth",
-  "ExtShaderTextureLod",
-  "ExtSRgb",
-  "ExtTextureFilterAnisotropic",
-  "OesElementIndexUint",
-  "OesStandardDerivatives",
-  "OesTextureFloat",
-  "OesTextureFloatLinear",
-  "OesTextureHalfFloat",
-  "OesTextureHalfFloatLinear",
-  "OesVertexArrayObject",
-  "WebglColorBufferFloat",
-  "WebglCompressedTextureAstc",
-  "WebglCompressedTextureEtc",
-  "WebglCompressedTextureEtc1",
-  "WebglCompressedTexturePvrtc",
-  "WebglCompressedTextureS3tc",
-  "WebglCompressedTextureS3tcSrgb",
-  "WebglDebugRendererInfo",
-  "WebglDebugShaders",
-  "WebglDepthTexture",
-  "WebglDrawBuffers",
-  "WebglLoseContext",
-  "OvrMultiview2",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "HtmlImageElement",
+    "HtmlVideoElement",
+    "ImageBitmap",
+    "ImageData",
+    "VideoFrame",
+    "WebGlActiveInfo",
+    "WebGlBuffer",
+    "WebGlFramebuffer",
+    "WebGlProgram",
+    "WebGlQuery",
+    "WebGlRenderbuffer",
+    "WebGlRenderingContext",
+    "WebGl2RenderingContext",
+    "WebGlSampler",
+    "WebGlShader",
+    "WebGlShaderPrecisionFormat",
+    "WebGlSync",
+    "WebGlTexture",
+    "WebGlTransformFeedback",
+    "WebGlUniformLocation",
+    "WebGlVertexArrayObject",
+    "Window",
+    "AngleInstancedArrays",
+    "ExtBlendMinmax",
+    "ExtColorBufferFloat",
+    "ExtColorBufferHalfFloat",
+    "ExtDisjointTimerQuery",
+    "ExtFragDepth",
+    "ExtShaderTextureLod",
+    "ExtSRgb",
+    "ExtTextureFilterAnisotropic",
+    "OesElementIndexUint",
+    "OesStandardDerivatives",
+    "OesTextureFloat",
+    "OesTextureFloatLinear",
+    "OesTextureHalfFloat",
+    "OesTextureHalfFloatLinear",
+    "OesVertexArrayObject",
+    "WebglColorBufferFloat",
+    "WebglCompressedTextureAstc",
+    "WebglCompressedTextureEtc",
+    "WebglCompressedTextureEtc1",
+    "WebglCompressedTexturePvrtc",
+    "WebglCompressedTextureS3tc",
+    "WebglCompressedTextureS3tcSrgb",
+    "WebglDebugRendererInfo",
+    "WebglDebugShaders",
+    "WebglDepthTexture",
+    "WebglDrawBuffers",
+    "WebglLoseContext",
+    "OvrMultiview2",
 ]
 
